# MySQLite-Storage-Engine

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.org  README.windows  common-commands.sh  configure  configure.in  make_and_run.sh  make_and_run_debug.sh
bench/: common.sh  fullscan.sh  group-by.sh  join-small-vs-large.sh  join-small-vs-medium.sh  sort.sh
config/: ac_gtest.m4  ac_mysql.m4
src/: CMakeLists.txt  Makefile.am  Makefile.in  README.org  TODO-edit.org  TODO.org  ha_mysqlite.cc  ha_mysqlite.h  ha_skeleton.cc  mysqlite_api.cc  mysqlite_api.h  mysqlite_apiTest.cc  mysqlite_config.h.in  mysqlite_probes.d  mysqlite_probes.h  mysqlite_types.h  pcache.cc  pcache.h  pcache_malloc.cc  pcache_malloc.h  pcache_mmap.cc  pcache_mmap.h  skeleton_config.h.in  skeleton_probes.d  sqlite.cc  sqlite_format.cc  sqlite_format.h  sqlite_formatTest.cc  udf_sqlite_db.cc  udf_sqlite_db.h  utils.cc  utils.h  utilsTest.cc
src/t/: CMakeLists.txt  mysqlite_apiTest.cc  pcacheMmapTest.cc  pcacheTest.cc  run_tests.sh  sqlite_formatTest.cc  utilsTest.cc
src/t/db/: BeerDB-small-jp.sqlite  BeerDB-small.sqlite  BtreeHeaderAnalysis-2cells-table.sqlite  BtreeHeaderAnalysis-simple.sqlite  FindTableRootPage.sqlite  TableBtree-10000rec-4tab-4096psize.sqlite  TableBtree-NoInteriorPage-fragmented.sqlite  TableBtree-NoInteriorPage.sqlite  TableLeafPage-2tables.sqlite  TableLeafPage-overflowpage.sqlite  wikipedia.sqlite
support-files/: install.sql  uninstall.sql
t/: 01-open-db.t  02-auto-create-table-mysql-incompat.t  02-auto-create-table.t  03-select-fullscan.t  03-select.t  04-insert-select-crash-test.t  05-complex-after-fullscan.t  06-large-join.t  07-sqlite-mutex.t
t/db/: 01-a.sqlite  01-illegal.sqlite  02-table1-ddl_long.sqlite  02-table1-ddl_short.sqlite  02-table3-ddl_short.sqlite  03-simple-beer-jp.sqlite  03-simple-beer.sqlite  07-a.sqlite  BeerDB-small.sqlite  TableLeafPage-2tables.sqlite  TableLeafPage-int.sqlite  TableLeafPage-overflowpage10000.sqlite  wikipedia.sqlite
