dnl For MySQLite Storage Engine
AC_INIT(src/ha_mysqlite.cc)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(src/mysqlite_config.h)
AM_INIT_AUTOMAKE("mysqlite_engine", 0.1)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
AC_PROG_LIBTOOL
LIBTOOL="$LIBTOOL --preserve-dup-deps"
AC_SUBST(LIBTOOL)dnl

sinclude(config/ac_mysql.m4)
sinclude(config/ac_system.m4)
sinclude(config/dtrace.m4)

MYSQL_SRC_TEST
AC_SUBST(MYSQL_INC)
AC_SUBST(MYSQL_SRC)

# We only support GCC and Sun's forte at the moment
if test "$GCC" = "yes"
then
  CXXFLAGS="$CXXFLAGS -fno-implicit-templates -fno-exceptions -fno-rtti"
else
  CFLAGS="-Xa -xstrconst -mt -D_FORTEC_ -fast -m64"
  CXXFLAGS="$CXXFLAGS -noex -mt -D_FORTEC_ -fast -m64"
  DTRACEFLAGS="-64"
fi

AC_C_CONST
AC_TYPE_SIZE_T
AC_CHECK_HEADERS(limits.h syslimits.h)
AC_OUTPUT(Makefile src/Makefile)
